# cheminformatics-labs

./: .gitignore  LICENSE  README.md  aspirin_out  cheminformatics-labs.cabal  cheminformatics-labs.cabal~
data/: aspirin.mol2  aspirin.mol2~  aspirin_out.mol2~  aspirin_out1.mol2  aspirin_yperite.mol2  histidine.mol2  quinone-a.mol2  quinone-a.mol2~  quinone-ab-centered.mol2  quinone-ab-centered.mol2~  quinone-ab-fitted.mol2  quinone-ab-fitted.mol2~  quinone-ab.mol2  quinone-ab.mol2~  quinone-ab_out.mol2  quinone-b.mol2  quinone-b.mol2~  quinone.mol2  quinone.mol2~  sequence.in~  sequence.out  test-a.mol2  test-ab-fitted.mol2  yperite.mol2  yperite.mol2~
src/: Garbage.hs  Garbage.hs~  Geometry.hs  LabsIntro.hs  Main.hs  Main.hs~  TestLabs.hs~
src/GLStuff/: GLStuff.hs  OrbitPointOfView.hs  PointsForRendering.hs  Shapes.hs  TestGlut.hs
src/Mol2/: Geometry.hs  Main.hs~  Mol2Parser.hs  Mol2Visualizer.hs  Mol2Visualizer.hs~  Superimposition.hs  TestGlut.hs
src/SeqAlign/: SeqAlign.hs  SeqAlign.hs~
