Name:                   cheminformatics-labs
Version:                0.0.1
Description:            Super cool mega labs
License:                GPL
License-file:           LICENSE
Author:                 Petr Kuderov
Maintainer:             pkuderov@gmail.com
Build-Type:             Simple
Cabal-Version:          >=1.2

extra-source-files:     data/sequence.in, data/sequence.out

Executable chemlabs
    Build-depends:      base >= 3 && < 5, random -any, haskell98 -any, OpenGL, GLUT
    Main-is:            Main.hs
    Buildable:          True
    Hs-source-dirs:     src, src/SeqAlign, src/Mol2
    Other-modules:      LabsIntro SeqAlign Garbage Mol2Visualizer
